# NES-Emulator

./: .gitignore  Cargo.toml  README.md
design/: 6502Architecture.csv
src/: macros.rs  main.rs
src/cpu/: bus.rs  cpu.rs  flags.rs  mod.rs  registers.rs  utils.rs
src/cpu/opcode_compression/: opcodes.rs
