[package]
name = "nes_emulator"
version = "0.1.0"
authors = ["Jack Kilrain", "Jayden Elliott"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.7.0"
slog-async = "2.6.0"
slog-term = "2.8.0"
slog-json = "2.3.0"
lazy_static = "1.4.0"
